Fix for z-index

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1457,83 +1457,83 @@ a.burst-button--pro:hover, button.burst-button--pro:hover, input.burst-button--p
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(1) {
-    width: 93%;
+    width: 78%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(2) {
-    width: 64%;
+    width: 76%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(3) {
-    width: 79%;
+    width: 75%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(4) {
-    width: 94%;
+    width: 96%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(5) {
-    width: 68%;
+    width: 92%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(6) {
-    width: 83%;
+    width: 85%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(7) {
-    width: 75%;
+    width: 98%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(8) {
-    width: 88%;
+    width: 90%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(9) {
-    width: 91%;
+    width: 80%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(10) {
-    width: 90%;
+    width: 61%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(11) {
-    width: 74%;
+    width: 81%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(12) {
-    width: 71%;
-}
-
-.burst-placeholder .burst-placeholder-line:nth-of-type(13) {
-    width: 93%;
-}
-
-.burst-placeholder .burst-placeholder-line:nth-of-type(14) {
     width: 100%;
 }
 
+.burst-placeholder .burst-placeholder-line:nth-of-type(13) {
+    width: 68%;
+}
+
+.burst-placeholder .burst-placeholder-line:nth-of-type(14) {
+    width: 70%;
+}
+
 .burst-placeholder .burst-placeholder-line:nth-of-type(15) {
-    width: 75%;
+    width: 64%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(16) {
-    width: 84%;
+    width: 89%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(17) {
-    width: 90%;
+    width: 81%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(18) {
-    width: 65%;
+    width: 93%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(19) {
-    width: 90%;
+    width: 84%;
 }
 
 .burst-placeholder .burst-placeholder-line:nth-of-type(20) {
-    width: 65%;
+    width: 83%;
 }
 
 .burst-placeholder .burst-placeholder-line ~ .burst-placeholder-line {
@@ -2042,7 +2042,7 @@ a.burst-button--pro:hover, button.burst-button--pro:hover, input.burst-button--p
 
 .burst div[class^=burst-wizard-] .burst-locked {
     position: absolute;
-    z-index: 10;
+    z-index: 4;
     top: 0;
     left: 0;
     bottom: 0;
