--- a/assets/css/admin/modules/wizard.scss
+++ b/assets/css/admin/modules/wizard.scss
@@ -20,7 +20,7 @@
 
     .burst-locked {
       position: absolute;
-      z-index: 10;
+      z-index: 4;
       top: 0;
       left: 0;
       bottom: 0;
